Try solve day 12 part 2 using grep instead of built in regex matcher